Purged Public Objectives